[package]
name = "venom"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.31", features = ["serde"] }
color-eyre = "0.6.2"
crossterm = "0.27.0"
dirs = "5.0.1"
edtui = "0.2.1"
ratatui = "0.25.0"
serde = { version = "1.0.195", features = ["derive", "rc"] }
serde_json = "1.0.111"
strum = "0.25.0"
strum_macros = "0.25.0"
